Make image responsive by adding the .img-responsive class

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<div class = 'col-md-4'></div>
 				<div class = 'col-md-4'>
 					<!-- Image goes here -->
-					<img src = 'avatar.jpg' class = 'img-circle' id = 'avatar'/>
+					<img src = 'avatar.jpg' class = 'img-circle .img-responsive' id = 'avatar'/>
 				</div>
 				<div class = 'col-md-4'></div>
 			</div><!-- End of first row -->
